add project dialog example,user model

--- a/Todo.txt
+++ b/Todo.txt
@@ -1,3 +1,10 @@
-title widget onclick become search input
+########UI#######
+title widget onclick become search input - done
+design login/register/addproject
 filter results
 design page, and modify the class and models
+########LOGIC#######
+database with login/register
+update ui login/register logic (https get/set)
+create search logic
+create filter results logic
